# inliners

./: .travis.yml  Cargo.toml  README.md
src/: handler.rs  main.rs  tests.rs  utils.rs
src/handler/: base.rs  css.rs  favicon.rs  image.rs  script.rs
test_data/: test.html  test.min.html
test_data/assets/: script.js  style.css
test_data/assets/a/: 002.css
test_data/assets/a/b/: import.css
test_data/img/: i.tif
