[package]
name = "inliners"
description = "Inline images, CSS, JavaScript and more into a single HTML web page. Quite fast."
readme = "README.md"
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/makovich/inliners"
homepage = "https://github.com/makovich/inliners"
keywords = [
    "download",
    "html",
    "inline",
    "archive",
    "tool",
]
version = "0.5.0"
authors = ["paul makovich <paul@makovi.ch>"]
license = "MIT OR Unlicense"
edition = "2018"

[[bin]]
name = "inline"
path = "src/main.rs"

[features]
default = ["minify-html"]
esbuild = ["minify-html/js-esbuild"]

[dependencies]
kuchiki = "0.8"
html5ever = "0.25"
rayon = "1.5"
base64 = "0.13"
url = "2.2"
minreq = { version = "2.3", features = ["https"] }
anyhow = "1.0"
regex = "1.4"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
once_cell = "1.5"
human-panic = "1.0"
atty = "0.2"
retry = "1.2"
mime_guess = "2.0"
minify-html = { version = "0.4", optional = true }

[badges.appveyor]
repository = "makovich/inliners"

[badges.travis-ci]
repository = "makovich/inliners"

[profile.release]
lto = true
codegen-units = 1
